fix: add divider element and update styles for improved layout and readability

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           </div>
         </div>
         <div id="distance" aria-live="polite"></div>
+        <div class="divider"></div>
         <div id="details" aria-live="polite">
           <span class="details-empty">Loading...</span>
         </div>
